<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragmentContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.blackbeltcoder.nunut.app.MainRegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="3dp">

        <View
            android:layout_width="0dp"
            android:layout_weight="33"
            android:layout_height="8dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:background="@color/colorProgressGreen"/>

        <View
            android:layout_width="0dp"
            android:layout_weight="33"
            android:layout_height="8dp"
            android:layout_marginRight="3dp"
            android:background="@color/colorTextLightGrey"/>

        <View
            android:layout_width="0dp"
            android:layout_weight="33"
            android:layout_height="8dp"
            android:layout_marginRight="3dp"
            android:background="@color/colorTextLightGrey"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:layout_marginBottom="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.blackbeltcoder.nunut.component.CustomTextView
                android:id="@+id/tvTitle1"
                style="@style/txt_20_primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:textStyle="bold"
                android:text="@string/msg_submit_address_1" />

            <com.blackbeltcoder.nunut.component.CustomTextView
                android:id="@+id/tvTitle2"
                style="@style/txt_20_primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:textStyle="bold"
                android:text="@string/msg_submit_address_2" />

            <com.blackbeltcoder.nunut.component.CustomTextView
                android:id="@+id/tvAccountExist"
                style="@style/txt_16_primary"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center|right"
                app:textStyle="light_italic"
                android:clickable="true"
                android:text="@string/msg_account_exist" />

            <EditText
                android:id="@+id/etHidden"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:focusable="true"
                android:focusableInTouchMode="true"/>

            <RelativeLayout
                android:layout_marginTop="5dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.blackbeltcoder.nunut.component.CustomTextView
                    android:id="@+id/tvHomeAddress"
                    style="@style/txt_16_primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/label_home" />

                <!--<EditText
                    android:id="@+id/etHomeAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_home"
                    android:layout_alignParentBottom="true"
                    android:hint="@string/prompt_home_address"
                    android:maxLines="4"
                    android:clickable="true"
                    android:ems="10" />-->

                <com.blackbeltcoder.nunut.component.CustomTextView
                    android:id="@+id/etHomeAddress"
                    style="@style/txt_18_black"
                    android:drawableLeft="@drawable/ic_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvHomeAddress"
                    android:paddingLeft="3dp"
                    android:paddingRight="3dp"
                    android:gravity="center_vertical"
                    android:maxLines="4"
                    android:clickable="true"
                    android:hint="@string/prompt_home_address" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/etHomeAddress"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorPrimaryDark"/>

            </RelativeLayout>

            <RelativeLayout
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:layout_width="match_parent"
                android:layout_height="70dp">

                <com.blackbeltcoder.nunut.component.CustomTextView
                    android:id="@+id/tvHomePostal"
                    style="@style/txt_16_primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/label_postal_code" />

                <AutoCompleteTextView
                    android:id="@+id/etHomePostal"
                    style="@style/txt_18_black"
                    android:hint="@string/prompt_home_postal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_home_address"
                    android:gravity="center_vertical"
                    android:layout_alignParentBottom="true" />

                <!--<EditText
                    android:id="@+id/etHomePostal"
                    style="@style/txt_18_black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_home_address"
                    android:layout_alignParentBottom="true"
                    android:inputType="number"
                    android:maxLength="5"
                    android:maxLines="1"
                    android:hint="@string/prompt_home_postal"
                    android:ems="10" />-->

            </RelativeLayout>

            <RelativeLayout
                android:layout_marginTop="25dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.blackbeltcoder.nunut.component.CustomTextView
                    android:id="@+id/tvOfficeAddress"
                    style="@style/txt_16_primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/label_office" />

                <!--<EditText
                    android:id="@+id/etOfficeAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_office"
                    android:layout_alignParentBottom="true"
                    android:hint="@string/prompt_office_address"
                    android:maxLines="4"
                    android:clickable="true"
                    android:ems="10" />-->

                <com.blackbeltcoder.nunut.component.CustomTextView
                    android:id="@+id/etOfficeAddress"
                    style="@style/txt_18_black"
                    android:drawableLeft="@drawable/ic_office"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvOfficeAddress"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:gravity="center_vertical"
                    android:maxLines="4"
                    android:clickable="true"
                    android:hint="@string/prompt_home_address" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/etOfficeAddress"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorPrimaryDark"/>

            </RelativeLayout>

            <RelativeLayout
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:layout_width="match_parent"
                android:layout_height="70dp">

                <com.blackbeltcoder.nunut.component.CustomTextView
                    android:id="@+id/tvOfficePostal"
                    style="@style/txt_16_primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/label_postal_code" />

                <!--<EditText
                    android:id="@+id/etOfficePostal"
                    style="@style/txt_18_black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_home_address"
                    android:layout_alignParentBottom="true"
                    android:inputType="number"
                    android:maxLength="5"
                    android:maxLines="1"
                    android:hint="@string/prompt_office_postal"
                    android:ems="10" />-->

                <AutoCompleteTextView
                    android:id="@+id/etOfficePostal"
                    style="@style/txt_18_black"
                    android:hint="@string/prompt_office_postal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_home_address"
                    android:gravity="center_vertical"
                    android:layout_alignParentBottom="true" />

            </RelativeLayout>

            <Switch
                android:text="i want to be a driver"
                style="@style/txt_16_primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:layout_marginTop="25dp"
                android:drawableLeft="@drawable/ic_driver"
                android:id="@+id/switchIsDriver" />

            <Button
                android:id="@+id/btnNext"
                style="@style/button_default"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="@dimen/separator_margin"
                android:layout_marginRight="@dimen/separator_margin"
                android:layout_marginBottom="25dp"
                android:text="Next Step"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
