<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragmentContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.blackbeltcoder.nunut.app.MainRegisterRouteCheckFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="3dp">

        <View
            android:layout_width="0dp"
            android:layout_weight="33"
            android:layout_height="8dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:background="@color/colorTextLightGrey"/>

        <View
            android:layout_width="0dp"
            android:layout_weight="33"
            android:layout_height="8dp"
            android:layout_marginRight="3dp"
            android:background="@color/colorProgressGreen"/>

        <View
            android:layout_width="0dp"
            android:layout_weight="33"
            android:layout_height="8dp"
            android:layout_marginRight="3dp"
            android:background="@color/colorTextLightGrey"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:layout_marginBottom="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.blackbeltcoder.nunut.component.CustomTextView
                android:id="@+id/tvTitle1"
                style="@style/txt_20_primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:textStyle="bold"
                android:text="@string/msg_new_route" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:padding="10dp"
                android:orientation="vertical"
                android:background="@color/colorBackgroundGrey">

                <com.blackbeltcoder.nunut.component.CustomTextView
                    android:id="@+id/tvRoute"
                    style="@style/txt_30_primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:textStyle="bold"
                    android:maxLines="2"
                    android:text="Kelapa Gading - Menteng" />

                <com.github.lzyzsd.circleprogress.ArcProgress
                    android:id="@+id/apVote"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    app:arc_unfinished_color="@android:color/darker_gray"
                    app:arc_text_color="@color/colorPrimary"
                    app:arc_bottom_text=""
                    app:arc_bottom_text_size="14dp"/>

                <com.blackbeltcoder.nunut.component.CustomTextView
                    android:id="@+id/tvVoteLabel"
                    style="@style/txt_16_primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="110 - 500 votes" />

            </LinearLayout>

            <com.blackbeltcoder.nunut.component.CustomTextView
                android:id="@+id/tvTitle2"
                style="@style/txt_20_primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/separator_margin"
                android:layout_marginRight="@dimen/separator_margin"
                android:layout_marginTop="@dimen/separator_margin"
                android:gravity="center"
                android:text="@string/msg_submit_contact" />

            <EditText
                android:id="@+id/etHidden"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:focusable="true"
                android:focusableInTouchMode="true"/>

            <RelativeLayout
                android:layout_marginTop="15dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:layout_width="match_parent"
                android:layout_height="70dp">

                <com.blackbeltcoder.nunut.component.CustomTextView
                    android:id="@+id/tvEmailLabel"
                    style="@style/txt_16_primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="7dp"
                    android:text="@string/label_email" />

                <EditText
                    android:id="@+id/etEmailValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_mail"
                    android:layout_alignParentBottom="true"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:ems="10" />

            </RelativeLayout>

            <RelativeLayout
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:layout_width="match_parent"
                android:layout_height="70dp">

                <com.blackbeltcoder.nunut.component.CustomTextView
                    android:id="@+id/tvPhoneLabel"
                    style="@style/txt_16_primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="7dp"
                    android:text="@string/label_phone" />

                <EditText
                    android:id="@+id/etPhoneValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_phone"
                    android:layout_alignParentBottom="true"
                    android:hint="@string/prompt_phone"
                    android:inputType="number"
                    android:maxLength="15"
                    android:maxLines="1"
                    android:ems="10" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="@dimen/separator_margin"
                android:layout_marginRight="@dimen/separator_margin"
                android:layout_marginBottom="25dp">

                <Button
                    android:id="@+id/btnPrev"
                    style="@style/button_default_grey"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="45"
                    android:text="Previous"/>

                <Button
                    android:id="@+id/btnNext"
                    style="@style/button_default"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="45"
                    android:layout_marginLeft="10dp"
                    android:text="Next"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
